k8s-cluster/nginx/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: pizza
  labels:
    app: nginx
spec:
  ports:
    - name: https
      port: 443
      targetPort: 80
  selector:
    app: nginx
    tier: nginx
  type: NodePort
