k8s-cluster/nginx/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  namespace: pizza
spec:
  rules:
    - host: www.bootifulmicropizza.com
      http:
        paths:
        - path: /
          backend:
            serviceName: nginx
            servicePort: 80
